User API updated
